...
                            "หากยังไม่มีบัญชี?",
                            style: TextStyle(
                              color: AppColors.green[600],
                            ),
                          ),
                          TextButton(
                            key: Key("register_button"),
                            style: ButtonStyle(
                              overlayColor:
                                  MaterialStateProperty.all(Colors.transparent),
                              padding:
                                  MaterialStateProperty.all(EdgeInsets.zero),
                            ),
...
